@@ -15,7 +15,6 @@ import ru.yandex.practicum.filmorate.events.domain.model.value.Operation;
 import ru.yandex.practicum.filmorate.events.domain.service.DomainEventPublisher;
 import ru.yandex.practicum.filmorate.films.application.port.in.FilmRatingQuery;
 import ru.yandex.practicum.filmorate.films.application.port.in.FilmUseCase;
-import ru.yandex.practicum.filmorate.films.application.port.in.RecommendationQuery;
 import ru.yandex.practicum.filmorate.films.domain.model.Film;
 import ru.yandex.practicum.filmorate.films.domain.model.value.Genre;
 import ru.yandex.practicum.filmorate.films.domain.model.value.Mpa;
@@ -25,11 +24,9 @@ import ru.yandex.practicum.filmorate.infrastructure.web.dto.FilmWithDirectors;
 import ru.yandex.practicum.filmorate.likes.application.port.in.LikeUseCase;
 import ru.yandex.practicum.filmorate.search.application.port.in.SearchUseCase;
 import ru.yandex.practicum.filmorate.users.application.port.in.UserUseCase;
-import ru.yandex.practicum.filmorate.users.domain.model.User;
 
 import java.util.*;
 import java.util.stream.Collectors;
-
 
 @Service
 @RequiredArgsConstructor
@@ -38,8 +35,8 @@ public class FilmCompositionService {
   private final LikeUseCase likeService;
   private final UserUseCase userUseCase;
   private final DirectorUseCase directorUseCase;
-  private final ApplicationEventPublisher eventPublisher;
   private final SearchUseCase searchUseCase;
+  private final ApplicationEventPublisher eventPublisher;
   private final DomainEventPublisher domainEventPublisher;
 
   @Transactional
@@ -49,42 +46,34 @@ public class FilmCompositionService {
     return getFilmWithDirectors(film);
   }
 
-  private FilmWithDirectors getFilmWithDirectors(Film film) {
-    Map<Long, List<Director>> directorsMap = directorUseCase.getDirectorsForFilmIds(Set.of(film.id()));
-    List<Director> directors = directorsMap.getOrDefault(film.id(), Collections.emptyList());
-    FilmWithDirectors filmWithDirectors = new FilmWithDirectors(film, directors);
-    publishSearchUpdateEvent(filmWithDirectors);
-    return filmWithDirectors;
-  }
-
-  private void publishSearchUpdateEvent(FilmWithDirectors filmWithDirectors) {
-    Set<String> directorNames = filmWithDirectors.directors() != null
-                                ? filmWithDirectors.directors()
-                                                   .stream()
-                                                   .map(Director::name)
-                                                   .collect(Collectors.toSet())
-                                : Collections.emptySet();
-
-    FilmSearchDataUpdatedEvent event = new FilmSearchDataUpdatedEvent(this,
-                                                                      filmWithDirectors.film()
-                                                                                       .id(),
-                                                                      filmWithDirectors.film()
-                                                                                       .name(),
-                                                                      directorNames);
-    eventPublisher.publishEvent(event);
-  }
-
   @Transactional
   public FilmWithDirectors updateFilm(UpdateFilmCommand command) {
     Film film = filmUseCase.updateFilm(command);
     directorUseCase.updateFilmDirectors(film.id(), command.directorIds());
-    FilmWithDirectors filmWithDirectors = getFilmWithDirectors(film);
-    publishSearchUpdateEvent(filmWithDirectors);
-    return filmWithDirectors;
+    FilmWithDirectors fw = getFilmWithDirectors(film);
+    publishSearchUpdateEvent(fw);
+    return fw;
   }
 
-  public List<Film> getRecommendations(RecommendationQuery query) {
-    return filmUseCase.getRecommendations(query);
+  private FilmWithDirectors getFilmWithDirectors(Film film) {
+    Map<Long, List<Director>> map = directorUseCase.getDirectorsForFilmIds(Set.of(film.id()));
+    List<Director> directors = map.getOrDefault(film.id(), Collections.emptyList());
+    FilmWithDirectors fw = new FilmWithDirectors(film, directors);
+    publishSearchUpdateEvent(fw);
+    return fw;
+  }
+
+  private void publishSearchUpdateEvent(FilmWithDirectors fw) {
+    Set<String> names = fw.directors().stream()
+            .map(Director::name)
+            .collect(Collectors.toSet());
+    FilmSearchDataUpdatedEvent ev = new FilmSearchDataUpdatedEvent(
+            this,
+            fw.film().id(),
+            fw.film().name(),
+            names
+    );
+    eventPublisher.publishEvent(ev);
   }
 
   public List<FilmWithDirectors> getAllFilms() {
@@ -92,13 +81,9 @@ public class FilmCompositionService {
   }
 
   public List<FilmWithDirectors> enrichFilmsWithDirectors(List<Film> films) {
-    if (films.isEmpty()) {
-      return Collections.emptyList();
-    }
-    Set<Long> filmIds = films.stream()
-                             .map(Film::id)
-                             .collect(Collectors.toSet());
-    Map<Long, List<Director>> directorsByFilmId = directorUseCase.getDirectorsForFilmIds(filmIds);
+    if (films.isEmpty()) return Collections.emptyList();
+    Set<Long> ids = films.stream().map(Film::id).collect(Collectors.toSet());
+    Map<Long, List<Director>> map = directorUseCase.getDirectorsForFilmIds(ids);
     return films.stream()
                 .map(film -> new FilmWithDirectors(film,
                                                    directorsByFilmId.getOrDefault(film.id(), Collections.emptyList())))
@@ -108,69 +93,43 @@ public class FilmCompositionService {
   public boolean addLike(long filmId, long userId) {
     validateFilmExists(filmId);
     validateUserExists(userId);
-    boolean result = likeService.addLike(filmId, userId);
-    if (result) {
-      domainEventPublisher.publishLikeEvent(userId, Operation.ADD, filmId);
-    }
-    return result;
-  }
-
-  public void validateFilmExists(long filmId) {
-    if (filmUseCase.findFilmById(filmId)
-                   .isEmpty())
-      throw new ResourceNotFoundException("Film with id " + filmId + " not found");
-  }
-
-  public void validateUserExists(long userId) {
-    if (userUseCase.findUserById(userId)
-                   .isEmpty())
-      throw new ResourceNotFoundException("User with id " + userId + " not found");
+    boolean added = likeService.addLike(filmId, userId);
+    if (added) domainEventPublisher.publishLikeEvent(userId, Operation.ADD, filmId);
+    return added;
   }
 
   public boolean removeLike(long filmId, long userId) {
     validateFilmExists(filmId);
     validateUserExists(userId);
-    boolean result = likeService.removeLike(filmId, userId);
-    if (result) {
-      domainEventPublisher.publishLikeEvent(userId, Operation.REMOVE, filmId);
-    }
-    return result;
+    boolean removed = likeService.removeLike(filmId, userId);
+    if (removed) domainEventPublisher.publishLikeEvent(userId, Operation.REMOVE, filmId);
+    return removed;
   }
 
   public List<FilmWithDirectors> getPopularFilms(FilmRatingQuery query) {
-    List<Long> filmIds = filmUseCase.getFilmIdsByFilters(query.genreId()
-                                                              .orElse(null),
-                                                         query.year()
-                                                              .orElse(null));
+    List<Long> filmIds = filmUseCase.getFilmIdsByFilters(
+            query.genreId().orElse(null),
+            query.year().orElse(null)
+    );
+    query.directorId().ifPresent(directorId -> {
+      Set<Long> dirs = new HashSet<>(
+              directorUseCase.getFilmIdsByDirector(directorId, SortBy.LIKES)
+      );
+      filmIds.retainAll(dirs);
+    });
+    if (filmIds.isEmpty()) return Collections.emptyList();
+    Map<Long, Integer> counts = likeService.getLikeCountsForFilms(new HashSet<>(filmIds));
+    List<Long> sorted = filmIds.stream()
+            .sorted(Comparator.comparingInt(id -> -counts.getOrDefault(id, 0)))
+            .limit(query.limit())
+            .toList();
+    if (sorted.isEmpty()) return Collections.emptyList();
+    List<Film> films = filmUseCase.getFilmsByIds(sorted);
+    return enrichFilmsWithDirectors(films);
+  }
 
-    Optional<Long> directorIdOpt = query.directorId();
-    if (directorIdOpt.isPresent()) {
-      Set<Long> directorFilmIds = new HashSet<>(directorUseCase.getFilmIdsByDirector(directorIdOpt.get(),
-                                                                                     SortBy.LIKES));
-      filmIds = filmIds.stream()
-                       .filter(directorFilmIds::contains)
-                       .toList();
-    }
-
-    if (filmIds.isEmpty()) {
-      return Collections.emptyList();
-    }
-
-    Map<Long, Integer> likeCounts = likeService.getLikeCountsForFilms(new HashSet<>(filmIds));
-
-    List<Long> sortedPopularFilmIds = filmIds.stream()
-                                             .sorted(Comparator.comparingInt((Long id) -> likeCounts.getOrDefault(id,
-                                                                                                                  0))
-                                                               .reversed())
-                                             .limit(query.limit())
-                                             .toList();
-
-    if (sortedPopularFilmIds.isEmpty()) {
-      return Collections.emptyList();
-    }
-
-    List<Film> popularFilms = filmUseCase.getFilmsByIds(sortedPopularFilmIds);
-    return enrichFilmsWithDirectors(popularFilms);
+  public List<Film> getRecommendations(RecommendationQuery query) {
+    return filmUseCase.getRecommendations(query);
   }
 
   public List<Genre> getGenres() {
@@ -193,7 +152,7 @@ public class FilmCompositionService {
 
   public FilmWithDirectors getFilmById(long id) {
     Film film = filmUseCase.findFilmById(id)
-                           .orElseThrow(() -> new ResourceNotFoundException("Film with id " + id + " not found"));
+            .orElseThrow(() -> new ResourceNotFoundException("Film with id " + id + " not found"));
     return getFilmWithDirectors(film);
   }
 
@@ -201,61 +160,48 @@ public class FilmCompositionService {
     if (userId == friendId) {
       throw new ValidationException("User cannot be compared with themselves.");
     }
-
     validateUserExists(userId);
     validateUserExists(friendId);
-
-    Set<Long> userLikes = likeService.findLikedFilms(userId);
-    Set<Long> friendLikes = likeService.findLikedFilms(friendId);
-
-    Set<Long> commonFilmIds = new HashSet<>(userLikes);
-    commonFilmIds.retainAll(friendLikes);
-
-    if (commonFilmIds.isEmpty()) {
-      return List.of();
-    }
-
-    List<Film> commonFilms = filmUseCase.getFilmsByIds(commonFilmIds.stream()
-                                                                    .toList());
-    Map<Long, Integer> likeCounts = likeService.getLikeCountsForFilms(commonFilmIds);
-
-    return commonFilms.stream()
-                      .sorted(Comparator.comparingInt(film -> -likeCounts.getOrDefault(film.id(), 0)))
-                      .toList();
+    Set<Long> u = likeService.findLikedFilms(userId);
+    Set<Long> f = likeService.findLikedFilms(friendId);
+    u.retainAll(f);
+    if (u.isEmpty()) return Collections.emptyList();
+    List<Film> films = filmUseCase.getFilmsByIds(new ArrayList<>(u));
+    Map<Long, Integer> counts = likeService.getLikeCountsForFilms(u);
+    return films.stream()
+            .sorted(Comparator.comparingInt(fm -> -counts.getOrDefault(fm.id(), 0)))
+            .toList();
   }
 
   public List<FilmWithDirectors> getDirectorFilms(long directorId, SortBy sortBy) {
-    List<Long> filmIds = directorUseCase.getFilmIdsByDirector(directorId, sortBy);
-    if (filmIds.isEmpty()) {
-      return Collections.emptyList();
-    }
-    List<Film> films = filmUseCase.getFilmsByIds(filmIds);
+    List<Long> ids = directorUseCase.getFilmIdsByDirector(directorId, sortBy);
+    if (ids.isEmpty()) return Collections.emptyList();
+    List<Film> films = filmUseCase.getFilmsByIds(ids);
     return enrichFilmsWithDirectors(films);
-  }
-
-  public User getUserOrThrow(long id) {
-    return userUseCase.findUserById(id)
-                      .orElseThrow(() -> new ResourceNotFoundException("User with id " + id + " not found"));
   }
 
   public void deleteFilmById(long id) {
     filmUseCase.deleteFilmById(id);
   }
 
-  public List<FilmWithDirectors> searchFilms(@RequestParam String query, @RequestParam List<String> by) {
-    List<Long> filmIds = searchUseCase.searchFilms(query,
-                                                   by.stream()
-                                                     .map(String::toUpperCase)
-                                                     .collect(Collectors.toSet()));
-
-    if (filmIds.isEmpty()) {
-      return Collections.emptyList();
-    }
-
-    return enrichFilmsWithDirectors(getFilmByIds(filmIds));
+  public List<FilmWithDirectors> searchFilms(@RequestParam String query,
+                                             @RequestParam List<String> by) {
+    Set<String> keys = by.stream().map(String::toUpperCase).collect(Collectors.toSet());
+    List<Long> ids = searchUseCase.searchFilms(query, keys);
+    if (ids.isEmpty()) return Collections.emptyList();
+    List<Film> films = filmUseCase.getFilmsByIds(ids);
+    return enrichFilmsWithDirectors(films);
   }
 
-  public List<Film> getFilmByIds(List<Long> ids) {
-    return filmUseCase.getFilmsByIds(ids);
+  private void validateFilmExists(long filmId) {
+    if (filmUseCase.findFilmById(filmId).isEmpty()) {
+      throw new ResourceNotFoundException("Film with id " + filmId + " not found");
+    }
+  }
+
+  private void validateUserExists(long userId) {
+    if (userUseCase.findUserById(userId).isEmpty()) {
+      throw new ResourceNotFoundException("User with id " + userId + " not found");
+    }
   }
 }
